Adapt for inheritanceless MutableBytes and other bytes fixes
Signed-off-by: Luis Pinto <luis.pinto@consensys.net>