@@ -7,6 +7,7 @@ import static java.nio.charset.StandardCharsets.UTF_8;
 import static java.util.Objects.requireNonNull;
 
 import org.apache.tuweni.bytes.v2.Bytes;
+import org.apache.tuweni.bytes.v2.MutableBytes;
 import org.apache.tuweni.crypto.Hash;
 import org.apache.tuweni.units.bigints.UInt256;
 import org.apache.tuweni.units.bigints.UInt384;
@@ -42,11 +43,11 @@ public final class SSZ {
       if (bytes[0].size() > 32) {
         return Hash.keccak256(bytes[0]);
       } else {
-        return bytes[0].mutableCopy().rightPad(32);
+        return MutableBytes.rightPad(bytes[0], 32);
       }
     } else {
       Bytes hash = merkleHash(new ArrayList<>(Arrays.asList(bytes)));
-      return hash.mutableCopy().rightPad(32);
+      return MutableBytes.rightPad(hash, 32);
     }
   }
 
@@ -58,7 +59,7 @@ public final class SSZ {
    */
   static Bytes merkleHash(List<Bytes> values) {
     Bytes littleEndianLength = Bytes.ofUnsignedInt(values.size(), LITTLE_ENDIAN);
-    Bytes valuesLength = littleEndianLength.mutableCopy().rightPad(32);
+    Bytes valuesLength = MutableBytes.rightPad(littleEndianLength, 32);
 
     List<Bytes> chunks;
     if (values.isEmpty()) {
@@ -90,7 +91,7 @@ public final class SSZ {
       chunks = hashRound;
     }
 
-    return Hash.keccak256(Bytes.wrap(chunks.get(0), valuesLength));
+    return Hash.keccak256(Bytes.wrap(chunks.getFirst(), valuesLength));
   }
 
   // Encoding
@@ -449,7 +450,7 @@ public final class SSZ {
    * @return the SSZ encoding in a {@link Bytes} value
    */
   public static Bytes encodeUInt256(UInt256 value) {
-    return value.mutableCopy().reverse();
+    return MutableBytes.reverse(value);
   }
 
   /**
@@ -459,7 +460,7 @@ public final class SSZ {
    * @return the SSZ encoding in a {@link Bytes} value
    */
   public static Bytes encodeUInt384(UInt384 value) {
-    return value.mutableCopy().reverse();
+    return MutableBytes.reverse(value);
   }
 
   /**
